--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -286,7 +286,7 @@
         </div>
       {% elseif App.Users.userData.display_mode == 'tb' -%}
         <table id='itemList' class='table item-table mt-2' aria-describedby='pageTitle'>
-          <thead>
+          <thead class='with-top'>
             <tr>
               <th>
                 <div class='d-flex justify-content-between'>
