--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -407,6 +407,12 @@ button:disabled {
     thead {
         position: sticky;
         top: 0;
+
+        /* thead with no filter on top need to have this class to have a top border */
+        /* stylelint-disable-next-line selector-no-qualifying-type */
+        &.with-top {
+          border-top: 1px solid $firstlevel;
+        }
     }
 
     tbody {
@@ -419,11 +425,16 @@ button:disabled {
     }
 
     th {
+        border-top: 0;
         white-space: nowrap;
 
         &:not(:last-child) {
             border-right: $firstlevel 1px solid;
         }
+    }
+
+    .no-wrap {
+        white-space: nowrap;
     }
 }
 
@@ -435,6 +446,42 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
     background-color: $mainbackground;
 }
+
+/* responsive tables, with a threshold width pretty high */
+@media screen and (max-width: 800px) {
+    .table {
+        /** hide the header completely */
+        thead {
+            display: none;
+        }
+
+        tr {
+            display: block;
+        }
+
+        td,
+        th {
+            border-bottom: 1px solid $firstlevel;
+            display: block;
+            font-size: .8em;
+            /** ensure an empty value won't mess the rows */
+            min-height: 50px;
+            text-align: right;
+
+            &::before {
+                content: attr(data-label);
+                float: left;
+                font-weight: bold;
+                text-transform: uppercase;
+            }
+
+            &:last-child {
+                border-bottom: 3px solid $secondlevel;
+            }
+        }
+    }
+}
+
 
 
 /* TABLE SHOW MODE */
@@ -714,6 +761,11 @@ tr:nth-child(odd) {
 
     .side-panel-item {
         padding: 5px 0 5px 10px;
+
+        &.list-group-item {
+            background-color: $mediumstrong;
+            border: 0;
+        }
 
         /* Favtags will show up as selected */
         &.selected {
