--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -69,7 +69,7 @@
                   <div class='d-flex flex-row flex-wrap'>
                     {% for team in user.teams %}
                       {% set currentTeam = user.teams|filter(t => t.id == team.id)|first %}
-                      <div class='user-badge px-2 py-1 rounded mr-2 mt-2'>{{ team.name }}
+                      <div class='user-badge mr-2'>{{ team.name }}
                         {# prevent deleting association of the team we are currently logged in, allow it for other users #}
                         {% if team.id != App.Users.userData.team or user.userid != App.Users.userData.userid %}
                           <span title='{{ 'Delete'|trans }}' class='hl-hover-gray p-1 rounded clickable m-1' data-action='destroy-user2team' data-userid='{{ user.userid }}' data-teamid='{{ team.id }}'><i class='fas fa-xmark' style='color:#29AEB9'></i></span>
@@ -140,7 +140,7 @@
                 <td data-label='{{ 'Team(s)'|trans }}' style='max-width: 270px'>
                   <div class='d-flex flex-row flex-wrap'>
                     {% for team in user.teams %}
-                      <div class='px-2 py-1 rounded mr-2 mt-2 {{ team.usergroup == 2 ? 'admin-badge' : 'user-badge' }}'>{{ team.name }}</div>
+                      <div class='mr-2 {{ team.usergroup == 2 ? 'admin-badge' : 'user-badge' }}'>{{ team.name }}</div>
                     {% endfor %}
                   </div>
                 </td>
