--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1252,11 +1252,15 @@ input[type='color'] {
 .user-badge {
     background-color: $lightblue;
     border: 1px solid $firstlevel;
+    border-radius: .25rem;
+    padding: 4px 8px;
 }
 
 .admin-badge {
     background-color: $lightblue;
     border: 1px solid $gold;
+    border-radius: .25rem;
+    padding: 4px 8px;
     position: relative;
 
     &::before {
