--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -26,8 +26,8 @@
     <tbody id='tplTableBody'>
       {% for template in templatesArr %}
         <tr>
-          <td><div class='user-badge text-center px-2 py-1 rounded mt-1'>{{ template.team_name }}</div></td>
-          <td>
+          <td data-label='{{ 'Team' }}' style='vertical-align: middle'><span class='user-badge'>{{ template.team_name }}</span></td>
+          <td data-label='{{ 'Title' }}'>
             <a href='?tab=3&amp;mode=view&amp;templateid={{ template.id }}' class='btn p-2 hl-hover-gray lh-normal border-0' title='{{ 'View'|trans }}' aria-label='{{ 'View'|trans }}'><i class='fas fa-eye fa-fw'></i></a>
             {# we only show the edit button for templates that we own, because here we don't really have information if it's readonly or not #}
             {% if App.Users.userid == template.userid %}
@@ -37,11 +37,11 @@
               <button title='{{ 'Toggle pin (add to create button menu)'|trans }}' aria-label='{{ 'Toggle pin (add to create button menu)'|trans }}' type='button' data-action='toggle-pin' data-id='{{ template.id }}' class='btn lh-normal border-0 p-2 {{- template.is_pinned ? ' bgnd-gray' : ' hl-hover-gray' }}'>
                 <i class='fas fa-thumbtack {{ not template.is_pinned ? 'color-weak' }} fa-fw'></i></button>
               {{ template.title }}</td>
-          <td>
+          <td data-label='{{ 'Category' }}'>
             <span class='catstat-btn category-btn' style='--bg:#{{ template.category_color }}'>{{ template.category_title }}</span>
           </td>
-          <td><span class='{{ template.fullname == App.Users.userData.fullname ? 'font-weight-bold' }}'>{{ template.fullname }}</span></td>
-          <td>{{ template.modified_at }}</td>
+          <td data-label='{{ 'Owner' }}'><span class='{{ template.fullname == App.Users.userData.fullname ? 'font-weight-bold' }}'>{{ template.fullname }}</span></td>
+          <td data-label='{{ 'Last modification date' }}'>{{ template.modified_at }}</td>
         </tr>
       {% endfor %}
     </tbody>
