--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -89,7 +89,9 @@
       <select name='cat' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Filter category'|trans }}'>
         <option value=''>{{ 'Filter category'|trans }}</option>
         {% for category in categoryArr %}
-          <option value='{{ category.id }}'{{ App.Request.query.get('cat') == category.id ? ' selected' }}>
+          <option value='{{ category.id }}'
+            {{- App.Request.query.get('cat') == category.id or (searchPage and (App.Request.query.get('expCatHelper') == category.title or App.Request.query.get('resCatHelper') == category.title)) ? ' selected' -}}
+          >
           {{ category.title }}</option>
         {% endfor %}
       </select>
@@ -98,7 +100,9 @@
       <select name='status' class='autosubmit mr-1 mb-2 form-control' aria-label='{{ 'Filter status'|trans }}'>
         <option value=''>{{ 'Filter status'|trans }}</option>
         {% for status in statusArr %}
-          <option value='{{ status.id }}'{{ App.Request.query.get('status') == status.id ? ' selected' }}>
+          <option value='{{ status.id }}'
+            {{- App.Request.query.get('status') == status.id or (searchPage and (App.Request.query.get('expStatusHelper') == status.title or App.Request.query.get('resStatusHelper') == status.title)) ? ' selected' -}}
+          >
           {{ status.title }}</option>
         {% endfor %}
       </select>
@@ -139,13 +143,24 @@
 
       {# SEARCH WITH TAG #}
       {% if App.Config.configArr.debug -%}
-        <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+        <!-- [html-validate-disable prefer-native-element: suppress error from tom-select] -->
       {%- endif %}
-      <select multiple name='tags[]' class='form-control mr-1 mb-2 selectpicker' data-show-subtext='true' data-none-selected-text='{{ 'Tags'|trans }}' data-live-search='true' data-style='' data-style-base='form-control' data-showtick='true' data-actions-box='true'>
+      <select
+        id='tagFilter'
+        multiple
+        name='tags[]'
+        class='form-control mr-1 mb-2 '
+        placeholder='{{ 'Tags'|trans }}'
+      >
+        <option value='' disabled >{{ 'Tags'|trans }}</option>
         {% for tag in tagsArrForSelect %}
-          <option value='{{ tag.tag|e('html_attr') }}'{{ tag.tag in App.Request.query.all('tags') ? ' selected' }}>{{ tag.tag }}</option>
+          <option value='{{ tag.tag|e('html_attr') }}' {{- tag.tag in App.Request.query.all('tags') ? ' selected' }}>{{ tag.tag }}</option>
         {% endfor %}
       </select>
+      {% if App.Config.configArr.debug -%}
+        <!-- [html-validate-enable prefer-native-element: end suppress error from tom-select] -->
+      {%- endif %}
+
       {# ARCHIVED filter #}
       <div class='input-group mr-1 mb-2'>
         <div class='input-group-text'>
