--- a/src/templates/filter-input-snippet.html
+++ b/src/templates/filter-input-snippet.html
@@ -1,7 +1,7 @@
 {# filter input. requires var target: the id of the table's tbody or ul element
  # optional targetType var tr or li #}
 <div class='input-group'>
-  <input type='text' aria-label='{{ 'Filter'|trans }}' placeholder='{{ 'Filter'|trans }}' data-filter='{{ target }}' data-target-type='{{ targetType|default('tr') }}' class='form-control form-inline' />
+  <input type='text' aria-label='{{ 'Filter'|trans }}' placeholder='{{ 'Filter'|trans }}' data-filter-target='{{ target }}' data-target-type='{{ targetType|default('tr') }}' class='form-control form-inline' />
   <div class='input-group-append'>
     <button class='btn btn-outline-secondary' type='button' title='{{ 'Clear'|trans }}' aria-label='{{ 'Clear'|trans }}'>
       <i class='fas fa-times fa-fw'></i>
