--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -277,6 +277,7 @@
 
           <button data-action='lock-selected-entities' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Lock'|trans }}</button>
           <button data-action='timestamp-selected-entities' type='button' class='btn btn-primary mr-1 mb-2'>{{ 'Timestamp'|trans }}</button>
+          <button data-action='archive-selected-entities' type='button' class='btn btn-secondary mr-1 mb-2'>{{ 'Archive'|trans }}</button>
           <button data-action='destroy-selected-entities' type='button' class='btn btn-danger mr-1 mb-2'>{{ 'Delete'|trans }}</button>
         </div>
       </div>
