--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -382,10 +382,11 @@
         </button>
       </div>
     </div>
-    <p>{{ 'Signature keys allow you to cryptographically sign some data. Have a look at the %scomplete documentation%s.'|trans|format("<a class='external-link' target='_blank' rel='noopener' href='https://doc.elabftw.net/user-guide.html#signatures'>", "</a>")|raw }}</p>
+    <p>{{ 'Signature keys are a highly secure public-key signature system that allows you to cryptographically sign experiments or resources. Signing an entry will generate an immutable archive.'|trans }}</p>
+    <p class='smallgray'>{{ 'To learn more about signature keys, have a look at the %scomplete documentation%s.'|trans|format("<a class='external-link' target='_blank' rel='noopener' href='https://doc.elabftw.net/user-guide.html#signatures'>", "</a>")|raw }}</p>
     {% if not App.Users.userData.sig_privkey %}
-      <p>{{ 'You do not have a key pair associated with your account yet. In order to generate one, enter a passphrase below and click the button.'|trans }}<p>
-    <label for='sigPassphraseInput'>{{ 'Enter a passphrase:'|trans }}</label>
+      <p>{{ 'You do not have a key pair associated with your account yet.'|trans|msg('warning', false) }}<p>
+    <label for='sigPassphraseInput'>{{ 'To generate a key pair, enter a passphrase below and click the button:'|trans }}</label>
     <div class='input-group'>
       <input type='password' class='form-control' autocomplete='new-password' id='sigPassphraseInput' minlength='{{ App.Config.configArr.min_password_length }}' />
       <div class='input-group-append'>
@@ -394,7 +395,7 @@
     </div>
       <span class='smallgray'>{{ 'Tip: use a password manager or a passphrase that you can remember, see %sthis XKCD comic%s.'|trans|format("<a target='_blank' rel='noopener' class='external-link' href='https://xkcd.com/936/'>", "</a>")|raw }}</span>
     {% else %}
-      <p>{{ 'Your account is already associated with a keypair.'|trans }}<p>
+      <p>{{ 'Your account is already associated with a keypair.'|trans|msg('ok', false) }}<p>
       <p>{{ 'Here is your public key. You can share it with the world:'|trans }}<p>
       <textarea class='form-control' disabled>{{ App.Users.userData.sig_pubkey }}</textarea>
     {% endif %}
