--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -80,7 +80,7 @@
       {% if not searchPage %}
         <input type='hidden' name='q' value='{{ DisplayParams.query|e('html_attr') }}' />
       {% endif %}
-      {% if DisplayParams.searchType == constant('Elabftw\\Enums\\SearchType::Related') %}
+      {% if App.Request.query.get('related') %}
         <input type='hidden' name='related' value='{{ App.Request.query.get('related')|number_format }}' />
         <input type='hidden' name='related_origin' value='{{ App.Request.query.getAlpha('related_origin') }}' />
       {% endif %}
@@ -187,7 +187,8 @@
 
   <div id='showModeContent'>
 
-  {% if count == 0 and searchType != constant('Elabftw\\Enums\\SearchType::Undefined') %}
+    {# Show message if we're looking for something (query parameters are present), but the number of results is 0 #}
+    {% if count == 0 and App.Request.query.all|length > 0 %}
     <div class='row display-flex' id='itemList'>
       {% set otherPage = Entity.type == 'experiments' ? 'database' : 'experiments' %}
       {% set otherCategory = Entity.type == 'experiments' ? 'items' : 'experiments' %}
@@ -198,7 +199,7 @@
         <button class='btn btn-primary' type='button'>{{ 'Search in %s'|trans|format(otherCategory) }}</button>
       </a>
     </div>
-  {% elseif count == 0 and searchType == constant('Elabftw\\Enums\\SearchType::Undefined') and not App.Session.get('is_anon') and not App.Request.query.get('offset') %}
+  {% elseif count == 0 and (App.Request.query.all|length == 0) and not App.Session.get('is_anon') and not App.Request.query.get('offset') %}
     <div class='row display-flex' id='itemList'>
       {{ "Welcome to eLabFTW. Use the 'Create new' button to get started!"|trans|msg('ok', false) }}
     </div>
