--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -446,6 +446,7 @@
   <table id='apiTable' class='table' aria-describedby='existingKeys' data-table-sort='true'>
     <thead>
       <tr>
+        <th scope='col'>{{ 'Team'|trans }}</th>
         <th scope='col'>{{ 'Name'|trans }}</th>
         <th scope='col'>{{ 'Permissions'|trans }}</th>
         <th scope='col'>{{ 'Creation date'|trans }}</th>
@@ -456,6 +457,7 @@
     <tbody>
       {% for key in apiKeysArr %}
         <tr>
+          <td data-label='{{ 'Team'|trans }}'><span class='user-badge'>{{ key.team_name }}</span></td>
           <td data-label='{{ 'Name'|trans }}'>{{ key.name }}</td>
           <td data-label='{{ 'Permissions'|trans }}'>{{ key.can_write ? 'Read/Write'|trans : 'Read Only'|trans }}</td>
           <td data-label='{{ 'Creation date'|trans }}'><span class='relative-moment' title='{{ key.created_at }}'></span></td>
