rename user control panel to settings
seems to be a more used term, and there is no need to try and be
original for this

--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -133,7 +133,7 @@
               <a class='dropdown-item' href='ucp.php?tab=3'><i class='fas fa-layer-group fa-fw'></i> {{ 'Templates'|trans }}</a>
               <a class='dropdown-item' href='profile.php'><i class='fas fa-user fa-fw'></i> {{ 'My profile'|trans }}</a>
               <a class='dropdown-item' data-action='toggle-todolist' href='#'><i class='fas fa-list fa-fw'></i> {{ 'Todolist'|trans }}</a>
-              <a class='dropdown-item' href='ucp.php'><i class='fas fa-cogs fa-fw'></i> {{ 'User panel'|trans }}</a>
+              <a class='dropdown-item' href='ucp.php'><i class='fas fa-cogs fa-fw'></i> {{ 'Settings'|trans }}</a>
               {% if App.Users.isAdmin %}
                 <a class='dropdown-item' href='admin.php'><i class='fas fa-tools fa-fw'></i> {{ 'Admin panel'|trans }}</a>
               {% endif %}
