--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -214,7 +214,7 @@
 {# TAB 3 TEMPLATE #}
 <div data-tabcontent='3' hidden>
   <h3 class='p-2 pl-3 section-title'><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
-  <p class='mt-3'>All the experiments templates are now visible at one place: the <a href='/ucp.php?tab=3'>User Control Panel</a>.</p>
+  <p class='mt-3'>All the experiments templates are now visible at one place: the <a href='/ucp.php?tab=3'>Settings</a>.</p>
 </div>
 
 {# TAB 4 EMAIL #}
