--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -282,6 +282,7 @@
 {# TAB 2 - USER INFORMATION #}
 <div data-tabcontent='2' hidden>
   <form class='form-group' method='post' action='app/controllers/UcpController.php' aria-label='{{ 'User information'|trans }}'>
+    <input type='hidden' name='origin' value='ucp_tab_2' />
     {{ App.Session.get('csrf')|csrf }}
     {# only show the email/password fields for locally authenticated users #}
     {% if App.Users.userData.auth_service == constant('Elabftw\\Controllers\\LoginController::AUTH_LOCAL') %}
