add uploads to templates
* add new CreateUploadFromS3 class to handle copying uploads from S3 to
  storage: when creating experiment from Template with uploads in S3
* add a duplicate public function to Uploads
* read templates uploads in output of readOne()
* fix lastSavedAt generating error on template page
* use default([]) for meaningArr and requestableActionArr

--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -12,7 +12,7 @@
         {# SELECT ACTION #}
         <label for='requestActionActionSelect'>{{ 'Select action'|trans }}</label>
         <select id='requestActionActionSelect' class='form-control'>
-          {% for value, text in requestableActionArr|sort %}
+          {% for value, text in requestableActionArr|default([])|sort %}
             <option value='{{ value }}'>{{ text }}</option>
           {% endfor %}
         </select>
@@ -99,7 +99,7 @@
         {% else %}
           <label for='sigMeaningSelect'>{{ 'Select a meaning for this signature'|trans }}</label>
           <select id='sigMeaningSelect' class='form-control'>
-            {% for meaning, text in meaningArr|sort %}
+            {% for meaning, text in meaningArr|default([])|sort %}
               <option value='{{ meaning }}'>{{ text }}</option>
             {% endfor %}
           </select>
