update translations for french

--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -44,7 +44,7 @@
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
-        <button type='button' class='btn btn-primary' data-action='regenerate-sigkeys' data-dismiss='modal'>{{ 'Regenerate'|trans }}</button>
+        <button type='button' class='btn btn-primary' data-action='regenerate-sigkeys' data-dismiss='modal'>{{ 'Regenerate signature keys'|trans }}</button>
       </div>
     </div>
   </div>
@@ -379,7 +379,7 @@
         </button>
         <div class='dropdown-divider'></div>
         <button type='button' data-action='toggle-modal' data-target='regenerateSigkeysModal' class='btn btn-dropdown-item hover-danger dropdown-item'>
-          <i class='mr-1 fas fa-recycle fa-fw'></i>{{ 'Regenerate keys'|trans }}
+          <i class='mr-1 fas fa-recycle fa-fw'></i>{{ 'Regenerate signature keys'|trans }}
         </button>
       </div>
     </div>
