improvements for links
* add status_color and status_title to links so we can display the
  status next to the category
* add page and type too
* greatly factorize all the link view and edit code by creating
  link-view-one.html template
* allow links to experiments on templates because why not: add a table
  experiments_templates2experiments
* add count for steps, uploads and links in parenthesis next to the
  title
* allow adjustHiddenState() to fail gracefully if elements are not found

WIP: need update structure.sql

--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -24,11 +24,11 @@
   {% if (mode == 'view' and Entity.entityData.uploads) or mode == 'edit' %}
   <div class='d-flex justify-content-between'>
     <div>{# necessary div for flex #}
-      <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-toggle-target='uploadsDiv' data-toggle-target-extra='uploadsViewToggler' class='d-inline togglable-section-title' tabindex='0' role='button'>
+      <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-toggle-target='uploadsDiv' data-toggle-target-extra='uploadsViewToggler' class='d-inline togglable-section-title' tabindex='0' role='button' id='uploadsDivTitle'>
         <i class='fas fa-caret-down fa-fw mr-2'></i>{% trans %}Attached file
         {% plural Entity.entityData.uploads|length %}
         Attached files
-        {% endtrans %}
+        {% endtrans %} ({{ Entity.entityData.uploads|length }})
       </h3>
     </div>
 
