use a mutation observer to adjust the count for links/steps/uploads
this saves us from having to do two requests to reload the link list +
the title, and is a much better approach imho

--- a/src/templates/link-view-one.html
+++ b/src/templates/link-view-one.html
@@ -1,7 +1,7 @@
 {# required vars:
   link: the link to display
   mode: edit edit-template view etc... #}
-<div class='ml-3 mt-3 col-md-12'>
+<div class='ml-3 mt-3 col-md-12 countable'>
   {% set randomId = random() %}
   <div class='d-flex mb-1 align-items-center' id='parent_{{ randomId }}'>
     <i class='fas fa-link fa-fw mr-2'></i>
