fix comments: use remove() for delete action
reload properly after creating one so the other stays editable
add counter

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -143,34 +143,32 @@
 
 <div id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
-    <div id='comment'>
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='commentsInnerDiv'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Comments'|trans }}</h3>
-    <div class='mt-2' id='commentsInnerDiv' data-save-hidden='commentsInnerDiv'>
-        {% for comment in Entity.entityData.comments %}
-          <div class='box'>
-            <div class='comment-header text-muted p-2'>
-              {{ comment.fullname }} {{ 'commented'|trans }}
-              <span title='{{ comment.created_at }}' class='relative-moment'></span>
-              {% if comment.created_at != comment.modified_at %}
-                ({{ 'edited'|trans }} <span title='{{ comment.modified_at }}' class='relative-moment'></span>)
-              {% endif %}
-              {% if comment.userid == Entity.Users.userData.userid and comment.immutable == 0 %}
-                <button type='button' class='btn float-right lh-normal border-0 m-0 p-2 my-n2 hl-hover-gray' data-action='destroy-comment' data-id='{{ comment.id }}' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}'>
-                  <i class='fas fa-fw fa-trash-alt fa-lg'></i>
-                </button>
-              {% endif %}
-            </div>
-            {# the comment itself is only editable by the owner #}
-            <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid and comment.immutable == 0 ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment|nl2br }}</p>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='commentsInnerDiv'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Comments'|trans }} (<span id='commentsCount'>{{ Entity.entityData.comments|length }}</span>)</h3>
+  <div class='mt-2' id='commentsInnerDiv' data-count-for='commentsCount' data-save-hidden='commentsInnerDiv'>
+      {% for comment in Entity.entityData.comments %}
+        <div class='box countable'>
+          <div class='comment-header text-muted p-2'>
+            {{ comment.fullname }} {{ 'commented'|trans }}
+            <span title='{{ comment.created_at }}' class='relative-moment'></span>
+            {% if comment.created_at != comment.modified_at %}
+              ({{ 'edited'|trans }} <span title='{{ comment.modified_at }}' class='relative-moment'></span>)
+            {% endif %}
+            {% if comment.userid == Entity.Users.userData.userid and comment.immutable == 0 %}
+              <button type='button' class='btn float-right lh-normal border-0 m-0 p-2 my-n2 hl-hover-gray' data-action='destroy-comment' data-id='{{ comment.id }}' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}'>
+                <i class='fas fa-fw fa-trash-alt fa-lg'></i>
+              </button>
+            {% endif %}
           </div>
-        {% endfor %}
+          {# the comment itself is only editable by the owner #}
+          <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid and comment.immutable == 0 ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment|nl2br }}</p>
+        </div>
+      {% endfor %}
 
-        {# CREATE COMMENT INPUT #}
-        <div class='input-group my-1 rounded'>
-          <textarea id='commentsCreateArea' class='form-control p-2 brr-none' autocomplete='off' placeholder='{{ 'Add a comment'|trans }}' aria-label='Comment area'></textarea>
-          <div class='input-group-append'>
-            <button class='btn btn-primary' aria-label='{{ 'Add a comment'|trans }}' type='button' data-action='create-comment'><i class='fas fa-paper-plane text-white'></i></button>
-          </div>
+      {# CREATE COMMENT INPUT #}
+      <div class='input-group my-1 rounded'>
+        <textarea id='commentsCreateArea' class='form-control p-2 brr-none' autocomplete='off' placeholder='{{ 'Add a comment'|trans }}' aria-label='Comment area'></textarea>
+        <div class='input-group-append'>
+          <button class='btn btn-primary' aria-label='{{ 'Add a comment'|trans }}' type='button' data-action='create-comment'><i class='fas fa-paper-plane text-white'></i></button>
         </div>
       </div>
     </div>
