Improvements for links (#5073)
* add order and sort query params to api spec
* improvements for links
* add status_color and status_title to links so we can display the
  status next to the category
* add page and type too
* greatly factorize all the link view and edit code by creating
  link-view-one.html template
* allow links to experiments on templates because why not: add a table
  experiments_templates2experiments
* add count for steps, uploads and links in parenthesis next to the
  title
* allow adjustHiddenState() to fail gracefully if elements are not found
* use a mutation observer to adjust the count for links/steps/uploads

this saves us from having to do two requests to reload the link list +
the title, and is a much better approach imho

* fix uploads on ucp

* add and correct structure sql

* fix comments: use remove() for delete action

reload properly after creating one so the other stays editable
add counter

--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -28,7 +28,7 @@
         <i class='fas fa-caret-down fa-fw mr-2'></i>{% trans %}Attached file
         {% plural Entity.entityData.uploads|length %}
         Attached files
-        {% endtrans %}
+        {% endtrans %} (<span id='uploadsCount'>{{ Entity.entityData.uploads|length }}</span>)
       </h3>
     </div>
 
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class='row mt-2 mx-0' id='uploadsDiv' data-save-hidden='uploadsDiv'>
+  <div class='row mt-2 mx-0' id='uploadsDiv' data-count-for='uploadsCount' data-save-hidden='uploadsDiv'>
     {# ADD NEW FILE #}
     {% if mode == 'edit' %}
       <div class='col-md-4 col-sm-6'>
@@ -69,7 +69,7 @@
         </thead>
         <tbody>
           {% for upload in Entity.entityData.uploads %}
-            <tr id='uploadDiv_{{ upload.id }}'>
+            <tr class='countable' id='uploadDiv_{{ upload.id }}'>
               <td>
                 <button type='button' class='btn lh-normal hl-hover-gray p-1 mr-1' data-action='toggle-next' data-toggle-target='moreinfoDiv_{{ upload.id }}' aria-expanded='false' title='{{ 'More information'|trans }}' aria-label='{{ 'More information'|trans }}'>
                   <i class='fas fa-caret-right fa-fw'></i>
@@ -129,7 +129,7 @@
     {% else %}
       {% for upload in Entity.entityData.uploads %}
         {% set ext = upload.real_name|getExt %}
-        <div class='col-md-4 col-sm-6' id='uploadDiv_{{ upload.id }}'>
+        <div class='col-md-4 col-sm-6 countable' id='uploadDiv_{{ upload.id }}'>
           {% if loop.first %}
             <div id='last-uploaded-link' data-url='app/download.php?f={{ upload.long_name }}' hidden></div>
           {% endif %}
