use data-action for destroy step
and remove element instead of reloading the page

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -13,7 +13,7 @@
               </button>
             </div>
             <div class='input-group-prepend'>
-              <button class='btn stepDestroy input-group-text' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}' type='button' data-stepid='{{ step.id }}'>
+              <button class='btn input-group-text' data-action='destroy-step' data-id='{{ step.id }}' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}' type='button'>
                 <i class='fas fa-trash-alt'></i>
               </button>
             </div>
