change ui for action requests
and add code for cancel action

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -924,6 +924,10 @@ the form-control fails to do that so we do the border ourselves */
     color: $white !important;
 }
 
+.color-blue {
+    color: $elabblue !important;
+}
+
 .color-success {
     color: $elabblue !important;
 }
