improvements on request actions ui

--- a/src/templates/request-actions-show.html
+++ b/src/templates/request-actions-show.html
@@ -2,8 +2,14 @@
 {% if requestActionsArr %}
   <ul class='list-group'>
     {% for action in requestActionsArr %}
-      <a class='list-group-item hl-hover-gray p-2 rounded' href='/{{ action.entity_page }}.php?mode=view&id={{ action.entity_id }}'>
-        <i class='fas fa-person-circle-exclamation fa-2x mr-2'></i>{{ action.requester_firstname }} is requesting {{ action.action }} on {{ action.entity_title }}<span title='{{ action.created_at }}' class='relative-moment text-nowrap smallgray ml-2'></span></a>
+      <li class='list-group-item'>
+        <div class='d-flex'>
+          <i class='fas fa-person-circle-exclamation color-blue mr-2'></i>
+          <div>
+            {{ '%s is requesting %s on'|trans|format(action.requester_firstname, action.action) }} <a href='/{{ action.entity_page }}.php?mode=view&id={{ action.entity_id }}'>{{ action.entity_title }}</a><span title='{{ action.created_at }}' class='relative-moment text-nowrap smallgray ml-2'></span></a>
+          </div>
+        </div>
+      </li>
     {% endfor %}
   </ul>
 {% endif %}
