--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -66,7 +66,7 @@
         </select>
       </div>
       <div class='modal-footer'>
-        <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
+        <button type='button' class='btn btn-ghost' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
         <button type='button' data-action='select-lang' data-dismiss='modal' class='btn btn-primary'>{{ 'Save'|trans }}</button>
       </div>
     </div>
