--- a/src/templates/onboarding-email-modal.html
+++ b/src/templates/onboarding-email-modal.html
@@ -16,7 +16,7 @@
         </select>
       </div>
       <div class='modal-footer'>
-        <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
+        <button type='button' class='btn btn-ghost' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
         <button type='button' class='btn btn-primary' data-dismiss='modal' data-action='send-onboarding-emails' >{{ 'Send'|trans }}</button>
       </div>
     </div>
